--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 <header class="header">
     <div class="wrapper">
 
+        <!-- Шапка для планшетов и десктопов -->
         <nav class="nav">
             <ul class="header-list">
                 <li class="header-item">
@@ -68,6 +69,7 @@
             </ul>
         </nav>
 
+        <!-- Шапка для мобильных устройств -->
         <nav class="nav-mobil">
 
             <ul class="list-m">
